fix(css): django-cms-icon svg stretch to fill

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django-cms-icon.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django-cms-icon.css
@@ -1,3 +1,7 @@
 span.has-svg {
   display: inline-block;
 }
+span.has-svg > svg {
+  width: 100%;
+  height: 100%;
+}
